<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.view.RegisterActivity">
    <EditText
        android:hint="@string/email_string"
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/password_string"
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/register_tv"
        android:text="@string/go_to_login_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>